added step to install zip on windows

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: zlib
+        if: ${{ matrix.os == "windows-latest" }}
+        uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: zlib
+
       - name: Set up Java
         uses: actions/setup-java@v1.4.3
         with:
