--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,13 +16,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        os: [ windows-latest ] #ubuntu-latest,, macos-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: zlib
-        if: matrix.os == 'windows-latest'
-        run: powershell -Command "(New-Object Net.WebClient).DownloadFile('https://git.io/JnHTY')"; ./install_zlib.bat; del install_zlib.bat
 
       - name: Set up Java
         uses: actions/setup-java@v1.4.3
