--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: zlib
+        if: matrix.os == 'windows-latest'
+        run: |
+          git clone https://github.com/commontk/zlib.git zlib
+          cd zlib ; cmake . ; make install
+
       - name: Set up Java
         uses: actions/setup-java@v1.4.3
         with:
