--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,14 +16,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-latest ] #ubuntu-latest,, macos-latest
+        os: [ windows-latest,ubuntu-latest ] #ubuntu-latest,, macos-latest
     steps:
+      # https://github.com/msys2/setup-msys2
       - uses: msys2/setup-msys2@v2
         if: matrix.os == 'windows-latest'
         name: zlib
         with:
           path-type: inherit
-          msystem: mingw64
+          msystem: MINGW64
           install: >-
             mingw-w64-x86_64-toolchain
             mingw-w64-x86_64-cmake
@@ -47,11 +48,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Maven Build
-        run: mvn -B package --file pom.xml -DskipTests
+        run: mvn -B package --file pom.xml -DskipTests -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
       - name: Maven Test
         shell: msys2 {0}
-        run: mvn test
+        run: mvn test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
       - name: Install Python Dependencies
         run: |
