--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ windows-latest,ubuntu-latest ] #ubuntu-latest,, macos-latest
+
     steps:
       # https://github.com/msys2/setup-msys2
       - uses: msys2/setup-msys2@v2
@@ -51,8 +52,23 @@ jobs:
         run: mvn -B package --file pom.xml -DskipTests -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
       - name: Maven Test
+        if: matrix.os == 'windows-latest'
         shell: msys2 {0}
         run: mvn test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+
+      - name: Maven Test
+        if: matrix.os != 'windows-latest'
+        run: mvn test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+
+      - name: upload test reports
+        uses: actions/upload-artifact@v2
+        if: ${{ always() }}
+        with:
+          name: surfire
+          path: |
+            **/target/surefire-reports/*
+          retention-days: 1
+
 
       - name: Install Python Dependencies
         run: |
