--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,12 +49,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Maven Build
-        run: mvn -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -B package --file pom.xml -DskipTests
+        run: mvn -D"org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn" -B package --file pom.xml -DskipTests
 
       - name: Maven Test
         if: matrix.os == 'windows-latest'
         shell: msys2 {0}
-        run: mvn -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn test
+        run: mvn -D"org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn" test
 
       - name: Maven Test
         if: matrix.os != 'windows-latest'
