try out windows

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-latest,ubuntu-latest ] #ubuntu-latest,, macos-latest
+        os: [ windows-latest ] #ubuntu-latest,, macos-latest
 
     steps:
       # https://github.com/msys2/setup-msys2
@@ -54,7 +54,10 @@ jobs:
       - name: Maven Test
         #        if: matrix.os == 'windows-latest'
         #        shell: msys2 {0}
-        run: mvn -D"org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn" test
+        run: |
+          set(ENV{CC} gcc)
+          set(ENV{CXX} g++)
+          mvn -D"org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn" test
 
       #      - name: Maven Test
       #        if: matrix.os != 'windows-latest'
